# ITMDA-Assignment_Predictive-Inventory-System

./: #DISABLED-requirements.txt  .gitignore  DummyApp.sln  PrototypeGroupProject-Backend.sln  README.md  data_service.py  launch.ps1  launch.sh  model_service.py  predict_service.py  pyproject.toml  run.py  service_env.py
CentralAPIDashboard/ITMDA-Assignment_Predictive-Inventory-System/forecast-service/: .dockerignore  compose.yml  docker-entrypoint.sh  pyproject.toml
CentralAPIDashboard/ITMDA-Assignment_Predictive-Inventory-System/forecast-service/data/: cached_features.feather
CentralAPIDashboard/ITMDA-Assignment_Predictive-Inventory-System/forecast-service/models/quantile_forecast/: Qhorizon1_q90.json  Qhorizon20_q70.json  Qhorizon20_q90.json
forecast/: .gitignore  README.md  __init__.py  aync_forecaster.py  config.py  data_understanding.ipynb  install.py  product_demand.ipynb  pyproject.toml
forecast-service/: .gitignore  Dockerfile  README.md  app.py  compose.yml  data_service.py  model_service.py  predict_service.py  prediction_requests.py  pyproject.toml  util.py
forecast-service/data/: cached_features.feather
forecast-service/libs/nutec-forecast/: pyproject.toml
forecast-service/libs/nutec-forecast/src/nutec_forecast/: __init__.py  async_forecaster.py
forecast-service/models/quantile_forecast/: Qhorizon10_q10.json  Qhorizon10_q50.json  Qhorizon10_q70.json  Qhorizon10_q90.json  Qhorizon1_q10.json  Qhorizon1_q50.json  Qhorizon1_q70.json  Qhorizon20_q10.json  Qhorizon20_q50.json  Qhorizon5_q10.json  Qhorizon5_q50.json  Qhorizon5_q70.json  Qhorizon5_q90.json
forecast-service/tests/: test_api.py
forecast/models/: __init__.py  aync_forecaster.py  forecast_base.py  forecast_models.py
forecast/src/nutec_forecast/: async_forecaster.py
forecast/src/nutec_forecast/util/: time_series_util.py
forecast/tests/forecast_tests/: test_forecast.py
forecast/tests/modelstests/: test_models.py  test_parameters.py  test_util.py
forecast/util/: time_series_util.py
libs/nutec-forecast/: .gitignore  README.md  pyproject.toml
libs/nutec-forecast/src/nutec_forecast/: async_forecaster.py  config.py
libs/nutec-forecast/tests/forecast_tests/: test_forecast.py
libs/nutec-forecast/tests/modelstests/: test_util.py
(+269 files in other folders)
