[project]
name = "nutec-forecast-service"
version = "2025.0.1"
description = "Nutec predicition microservice"
authors = [
]
# readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "consul",
    "requests",
    "fastapi>=0.99",
    "uvicorn[standard]>=0.23",
    "pydantic",
    "nutec-forecast @ file:///${PROJECT_ROOT}/libs/nutec-forecast"
]
