[project]
name = "nutec-forecast-service"
version = "2025.0.1"
description = "Nutec predicition microservice"
authors = [
]
# readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "python-consul",
    "requests",
    "fastapi>=0.99",
    "pydantic",
    "pydantic-settings",
    "nutec-forecast @ file:///${PROJECT_ROOT}/libs/nutec-forecast"
]
