[project]
name = "demand-forecast"
requires-python = ">=3.9"
version = "2025.0.0"
dependencies = [
    "pandas",
    "openpyxl",
    "scikit-learn",
    "pyswarms",
    "lightgbm",
]

[project.optional-dependencies]
cuda = [
    "torch==2.8.0+cu126",
]

rocm = [
    "torch==2.8.0+rocm6.4",
]
cpu = [
    "torch",
]
