['build-system']
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nutec-forecast"
version = "2025.0.1"
description = "forecasting lib"
readme = "README.md"
authors =[{name="grant"}]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "pydantic_settings",
    "openpyxl",
    "scikit-learn",
    "lightgbm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
